Removed slowdown debuff on low health